# bevy_prototype_egui_plugin

./: Cargo.toml  README.md
examples/: demo.rs
src/: backend.rs  egui_plugin.rs  lib.rs  main.rs  painter.rs
